--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 #header .navbar {
   background-color: #fff;
+  padding-top: 17px;
+  padding-bottom: 17px;
 }
 #header .navbar .menu-bar {
   background: none;
@@ -17,6 +19,7 @@
   text-transform: uppercase;
   transition: 0.2s;
 }
+.navbar-small .nav-item .nav-link.active,
 .navbar-small .nav-item .nav-link:hover {
   background-color: rgb(224, 224, 224);
   color: #000;
@@ -37,6 +40,7 @@
   text-transform: uppercase;
   transition: 0.2s;
 }
+#header .navbar-nav .nav-item .nav-link.active,
 #header .navbar-nav .nav-item .nav-link:hover {
   color: #83b828;
 }
@@ -82,6 +86,12 @@
   padding-left: 10px;
   font-size: 18px;
   margin-top: 5px;
+}
+.offcanvas-header .btn-close {
+  transition: 0.3s;
+}
+.offcanvas-header .btn-close:hover {
+  transform: rotate(180deg);
 }
 .login-and-register-form {
   padding: 10px;
